--- a/app/src/main/res/layout/fragment_characters_anime.xml
+++ b/app/src/main/res/layout/fragment_characters_anime.xml
@@ -1,19 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/pages_list"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#E57373">
 
     <FrameLayout
-        android:id="@+id/frame_auth"
-        android:visibility="gone"
+        android:background="#9575CD"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
