--- a/app/src/main/res/layout/sample_view_anime.xml
+++ b/app/src/main/res/layout/sample_view_anime.xml
@@ -8,22 +8,23 @@
     <ImageView
         android:id="@+id/poster"
         android:layout_width="match_parent"
-        android:layout_height="190dp"
-        android:background="@color/purple_200"
+        android:layout_height="170dp"
         android:scaleType="centerCrop"
         app:layout_constraintTop_toTopOf="parent" />
+
 
     <TextView
         android:id="@+id/name_anime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingStart="8dp"
-        android:paddingEnd="8dp"
         android:layout_marginBottom="8dp"
         android:ellipsize="end"
         android:maxLines="2"
-        android:textSize="13sp"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp"
         android:text="Monogatary Summer Day"
+        android:textColor="@color/white"
+        android:textSize="13sp"
         app:layout_constraintBottom_toBottomOf="@id/poster"
         app:layout_constraintStart_toStartOf="parent" />
 
